--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -30,6 +30,7 @@ build_script:
   - git submodule update --init --recursive
   - mkdir out
   - cd out
+  - if "%platform%"=="x64" set CMAKE_GENERATOR=%CMAKE_GENERATOR% Win64
   - cmake .. -G "%CMAKE_GENERATOR%" -DBERRYDB_USE_GLOG=0
       -DCMAKE_CONFIGURATION_TYPES="%CONFIGURATION%"
   - cmake --build . --config "%CONFIGURATION%"
