--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "third_party/snappy"]
 	path = third_party/snappy
 	url = https://github.com/google/snappy.git
+[submodule "third_party/crc32c"]
+	path = third_party/crc32c
+	url = https://github.com/google/crc32c.git
