--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,9 +11,7 @@ environment:
     - JOB: Visual Studio 2017
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       CMAKE_GENERATOR: Visual Studio 15 2017
-    - JOB: Visual Studio 2015
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-      CMAKE_GENERATOR: Visual Studio 14 2015
+    # When a new version of Visual Studio comes out, it can be added below.
 
 platform:
   - x86
