--- a/.travis.yml
+++ b/.travis.yml
@@ -27,12 +27,12 @@ addons:
     #   https://github.com/travis-ci/apt-source-whitelist/blob/master/ubuntu.json
     sources:
     - ubuntu-toolchain-r-test
-    - llvm-toolchain-trusty-5.0
+    - llvm-toolchain-trusty-6.0
     packages:
     - cmake
     - gcc-7
     - g++-7
-    - clang-5.0
+    - clang-6.0
 
 install:
 # Travis doesn't have a nice way to install homebrew packages yet.
@@ -49,11 +49,11 @@ install:
 - cmake --version
 
 before_script:
-- mkdir -p out && cd out
+- mkdir -p build && cd build
 - cmake .. -DBERRYDB_USE_GLOG=$GLOG -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 - cmake --build .
 - cd ..
 
 script:
-- out/berrydb_tests
-- out/berrydb_bench
+- build/berrydb_tests
+- build/berrydb_bench
