--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,8 +151,10 @@ target_sources(berrydb
     "${PROJECT_BINARY_DIR}/platform/berrydb/platform/config.h"
     "${PROJECT_SOURCE_DIR}/platform/berrydb/platform.h"
     "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/alloc.h"
-    "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/dcheck.h"
+    "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/checks.h"
+    "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/compiler.h"
     "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/endianness.h"
+    "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/hashing.h"
     "${PROJECT_SOURCE_DIR}/include/berrydb.h"
     "${PROJECT_SOURCE_DIR}/include/berrydb/catalog.h"
     "${PROJECT_SOURCE_DIR}/include/berrydb/options.h"
@@ -216,6 +218,7 @@ if(BERRYDB_BUILD_TESTS)
       "${PROJECT_SOURCE_DIR}/src/api/store_unittest.cc"
       "${PROJECT_BINARY_DIR}/src/api/version_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/embedder_tests/alloc_unittest.cc"
+      "${PROJECT_SOURCE_DIR}/src/embedder_tests/compiler_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/embedder_tests/endianness_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/embedder_tests/vfs_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/format/store_header_unittest.cc"
