Pull endianness DCHECKs out of platform/.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,7 @@ target_sources(berrydb
     "${PROJECT_SOURCE_DIR}/src/store_impl.h"
     "${PROJECT_SOURCE_DIR}/src/transaction_impl.cc"
     "${PROJECT_SOURCE_DIR}/src/transaction_impl.h"
+    "${PROJECT_SOURCE_DIR}/src/util/endianness.h"
     "${PROJECT_SOURCE_DIR}/src/util/linked_list.h"
     "${PROJECT_SOURCE_DIR}/src/util/platform_allocator.h"
     "${PROJECT_SOURCE_DIR}/src/util/platform_deleter.h"
@@ -151,7 +152,7 @@ target_sources(berrydb
     "${PROJECT_BINARY_DIR}/platform/berrydb/platform/config.h"
     "${PROJECT_SOURCE_DIR}/platform/berrydb/platform.h"
     "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/alloc.h"
-    "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/checks.h"
+    "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/dcheck.h"
     "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/compiler.h"
     "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/endianness.h"
     "${PROJECT_SOURCE_DIR}/platform/berrydb/platform/hashing.h"
@@ -233,6 +234,7 @@ if(BERRYDB_BUILD_TESTS)
       "${PROJECT_SOURCE_DIR}/src/test/file_deleter.h"
       "${PROJECT_SOURCE_DIR}/src/test/file_deleter_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/test/test_main.cc"
+      "${PROJECT_SOURCE_DIR}/src/util/endianness_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/util/linked_list_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/util/platform_allocator_unittest.cc"
       "${PROJECT_SOURCE_DIR}/src/util/platform_deleter_unittest.cc"
