--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@
 # http://about.travis-ci.org/docs/user/build-configuration/
 # This file can be validated on: http://lint.travis-ci.org/
 
-sudo: false
 dist: xenial
 language: cpp
 
@@ -28,26 +27,29 @@ matrix:
 
 addons:
   apt:
-    # List of whitelisted in travis packages for ubuntu-trusty can be found here:
-    #   https://github.com/travis-ci/apt-package-whitelist/blob/master/ubuntu-trusty
-    # List of whitelisted in travis apt-sources:
-    #   https://github.com/travis-ci/apt-source-whitelist/blob/master/ubuntu.json
     sources:
     - ubuntu-toolchain-r-test
     - llvm-toolchain-xenial-7
     packages:
+    - clang-7
     - cmake
     - gcc-8
     - g++-8
-    - clang-7
+    - ninja-build
+  homebrew:
+    packages:
+    - cmake
+    - gcc@8
+    - ninja
+
+before_install:
+# The Travis VM image for Mac already has a link at /usr/local/include/c++,
+# causing Homebrew's gcc installation to error out. This was reported to
+# Homebrew maintainers at https://github.com/Homebrew/brew/issues/1742 and
+# removing the link emerged as a workaround.
+- if [ "$TRAVIS_OS_NAME" == "osx" ]; then rm -f /usr/local/include/c++ ; fi
 
 install:
-# Travis doesn't have a nice way to install homebrew packages yet.
-# https://github.com/travis-ci/travis-ci/issues/5377
-- if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew update; fi
-# https://github.com/Homebrew/brew/issues/1742
-- if [ "$TRAVIS_OS_NAME" == "osx" ]; then rm -f /usr/local/include/c++ ; fi
-- if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install gcc@8; fi
 # /usr/bin/gcc is stuck to old versions by on both Linux and OSX.
 - if [ "$CXX" = "g++" ]; then export CXX="g++-8" CC="gcc-8"; fi
 - echo ${CC}
@@ -57,7 +59,7 @@ install:
 
 before_script:
 - mkdir -p build && cd build
-- cmake .. -DBERRYDB_USE_GLOG=$GLOG -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+- cmake .. -G Ninja -DBERRYDB_USE_GLOG=$GLOG -DCMAKE_BUILD_TYPE=$BUILD_TYPE
 - cmake --build .
 - cd ..
 
