--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@
 # http://about.travis-ci.org/docs/user/build-configuration/
 # This file can be validated on: http://lint.travis-ci.org/
 
-dist: xenial
 language: cpp
+dist: xenial
+osx_image: xcode10.2
 
 compiler:
   - gcc
@@ -17,13 +18,6 @@ env:
   - GLOG=1 BUILD_TYPE=RelWithDebInfo
   - GLOG=0 BUILD_TYPE=Debug
   - GLOG=0 BUILD_TYPE=RelWithDebInfo
-
-matrix:
-  exclude:
-    # GCC fails on recent Travis OSX images.
-    # https://github.com/travis-ci/travis-ci/issues/9640
-    - compiler: gcc
-      os: osx
 
 addons:
   apt:
@@ -50,6 +44,8 @@ before_install:
 # Homebrew maintainers at https://github.com/Homebrew/brew/issues/1742 and
 # removing the link emerged as a workaround.
 - if [ "$TRAVIS_OS_NAME" == "osx" ]; then rm -f /usr/local/include/c++ ; fi
+# The following Homebrew packages aren't linked by default, and need to be
+# prepended to the path explicitly.
 - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
      export PATH="$(brew --prefix llvm)/bin:$PATH";
   fi
