--- a/.travis.yml
+++ b/.travis.yml
@@ -38,15 +38,22 @@ addons:
     - ninja
     update: true
 
-before_install:
+install:
 # The following Homebrew packages aren't linked by default, and need to be
 # prepended to the path explicitly.
 - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
-     export PATH="$(brew --prefix llvm)/bin:$PATH";
+    export PATH="$(brew --prefix llvm)/bin:$PATH";
   fi
-
-install:
+# /usr/bin/gcc points to an older compiler on both Linux and macOS.
 - if [ "$CXX" = "g++" ]; then export CXX="g++-8" CC="gcc-8"; fi
+# /usr/bin/clang points to an older compiler on both Linux and macOS.
+#
+# Homebrew's llvm package doesn't ship a versioned clang++ binary, so the values
+# below don't work on macOS. Fortunately, the path change above makes clang and
+# clang++ point to the right compiler on macOS.
+- if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+    if [ "$CXX" = "clang++" ]; then export CXX="clang++-8" CC="clang-8"; fi;
+  fi
 - echo ${CC}
 - echo ${CXX}
 - ${CXX} --version
