--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@
 
 language: cpp
 dist: bionic
-osx_image: xcode10.3
+osx_image: xcode11.3
 
 compiler:
 - gcc
@@ -22,11 +22,11 @@ env:
 addons:
   apt:
     sources:
-    - sourceline: 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-9 main'
+    - sourceline: 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main'
       key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
     - sourceline: 'ppa:ubuntu-toolchain-r/test'
     packages:
-    - clang-9
+    - clang-10
     - cmake
     - gcc-9
     - g++-9
@@ -35,7 +35,7 @@ addons:
     packages:
     - cmake
     - gcc@9
-    - llvm@9
+    - llvm@10
     - ninja
     update: true
 
@@ -53,7 +53,7 @@ install:
 # below don't work on macOS. Fortunately, the path change above makes the
 # default values (clang and clang++) resolve to the correct compiler on macOS.
 - if [ "$TRAVIS_OS_NAME" = "linux" ]; then
-    if [ "$CXX" = "clang++" ]; then export CXX="clang++-9" CC="clang-9"; fi;
+    if [ "$CXX" = "clang++" ]; then export CXX="clang++-10" CC="clang-10"; fi;
   fi
 - echo ${CC}
 - echo ${CXX}
